test/classes/errors/nilability-init-var/init-var-oknil-borrowed-from-oknil-unmanaged.chpl
//  lhs: borrowed?  rhs: unmanaged?  ok

class MyClass {
  var x: int;
}

var rhs: unmanaged MyClass?;

var lhs: borrowed MyClass? = rhs;


